--- a/Cardiovascular_Disease.ipynb
+++ b/Cardiovascular_Disease.ipynb
@@ -1896,6 +1896,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make Prediction using one row from test data\n",
     "X_test_row = X_test[0:1]"
    ]
   },
