editting logistic regression

--- a/Cardiovascular_Disease.ipynb
+++ b/Cardiovascular_Disease.ipynb
@@ -3644,15 +3644,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-107-0a586889f1c3>, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-107-0a586889f1c3>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    print(f\" Logistic regression model accuracy (training): {accuracy_score(y_train,y_pred_train):.3f}\"\u001b[0m\n\u001b[0m                                                                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Logistic regression model accuracy: 0.726\n"
      ]
     }
    ],
@@ -3665,9 +3664,7 @@
     "\n",
     "# Evaluate the model\n",
     "y_pred = log_classifier.predict(X_test)\n",
-    "y_pred_train = log_classifier.predict(X_train)\n",
-    "print(f\" Logistic regression model accuracy (validation): {accuracy_score(y_test,y_pred):.3f}\")\n",
-    "print(f\" Logistic regression model accuracy (training): {accuracy_score(y_train,y_pred_train):.3f}\""
+    "print(f\" Logistic regression model accuracy: {accuracy_score(y_test,y_pred):.3f}\")"
    ]
   },
   {
