editing Jupyter Notebook

--- a/Cardiovascular_Disease_Xiao.ipynb
+++ b/Cardiovascular_Disease_Xiao.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4      0     0       0       0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "(70000, 13)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "max        1.000000      1.000000      1.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        " 'cardio']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "[70000 rows x 12 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "cardio          0.221147  0.089307 -0.015486 -0.007330 -0.035653  1.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
        "[70000 rows x 7 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1735,7 @@
        "[70000 rows x 6 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,41 +1775,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Random Forest Model"
+    "# Decision Tree Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kylie\\AppData\\Roaming\\Python\\Python37\\site-packages\\ipykernel_launcher.py:4: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  after removing the cwd from sys.path.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Train a Decision Tree Model\n",
-    "rf = RandomForestClassifier(n_estimators=100,\n",
-    "                            max_depth=5)\n",
-    "rf_model = rf.fit(X_train_scaled, y_train)"
+    "# Train a a Decision Tree Model\n",
+    "dt = tree.DecisionTreeClassifier(max_depth=5, random_state=42)\n",
+    "dt_model =dt.fit(X_train_scaled, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy (training): 0.730\n",
+      "Accuracy (training): 0.733\n",
       "Accuracy (testing): 0.729\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy (training): {0:.3f}\".format(\n",
+    "        dt.score(\n",
+    "            X_train_scaled,\n",
+    "            y_train)))\n",
+    "print(\"Accuracy (testing): {0:.3f}\".format(\n",
+    "        dt.score(\n",
+    "            X_test_scaled,\n",
+    "            y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forest Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kylie\\AppData\\Roaming\\Python\\Python37\\site-packages\\ipykernel_launcher.py:5: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  \"\"\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train a Random Forest Model\n",
+    "rf = RandomForestClassifier(n_estimators=90,\n",
+    "                            max_depth=5,\n",
+    "                            random_state=42)\n",
+    "rf_model = rf.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy (training): 0.731\n",
+      "Accuracy (testing): 0.732\n"
      ]
     }
    ],
@@ -2053,9 +2097,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kylie\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:73: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(**kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Logistic regression model testing accuracy: 0.719\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the logistic regression model\n",
     "log_classifier = LogisticRegression(solver=\"lbfgs\",max_iter=200)\n",
@@ -2065,7 +2125,68 @@
     "\n",
     "# Evaluate the model\n",
     "y_pred = log_classifier.predict(X_test)\n",
-    "print(f\" Logistic regression model accuracy: {accuracy_score(y_test,y_pred):.3f}\")"
+    "print(f\" Logistic regression model testing accuracy: {accuracy_score(y_test,y_pred):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trani a KNN Model\n",
+    "from sklearn import neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kylie\\AppData\\Roaming\\Python\\Python37\\site-packages\\ipykernel_launcher.py:2: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "knn=neighbors.KNeighborsClassifier(n_neighbors=50)\n",
+    "knn_model = knn.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy (training): 0.698\n",
+      "Accuracy (testing): 0.684\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy (training): {0:.3f}\".format(\n",
+    "        knn.score(\n",
+    "            X_train_scaled,\n",
+    "            y_train)))\n",
+    "print(\"Accuracy (testing): {0:.3f}\".format(\n",
+    "        knn.score(\n",
+    "            X_test_scaled,\n",
+    "            y_test)))"
    ]
   },
   {
@@ -2077,19 +2198,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kylie\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:73: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(**kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning rate:  0.01\n",
+      "Accuracy (training): 0.724\n",
+      "Accuracy (validation): 0.727\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kylie\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:73: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(**kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning rate:  0.05\n",
+      "Accuracy (training): 0.735\n",
+      "Accuracy (validation): 0.734\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kylie\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:73: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(**kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning rate:  0.1\n",
+      "Accuracy (training): 0.736\n",
+      "Accuracy (validation): 0.734\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "\n",
     "# Create a classifier object\n",
     "learning_rates = [0.01,0.05, 0.1]\n",
     "for learning_rate in learning_rates:\n",
-    "    GB = GradientBoostingClassifier(n_estimators=80,\n",
+    "    GB = GradientBoostingClassifier(n_estimators=100,\n",
     "                                            learning_rate=learning_rate,\n",
     "                                            max_features=5,\n",
-    "                                            max_depth=8,\n",
+    "                                            max_depth=3,\n",
     "                                            random_state=42)\n",
     "\n",
     "    # Fit the model\n",
